--- a/css/styles.css
+++ b/css/styles.css
@@ -596,11 +596,8 @@ video {
 .absolute {
 	position: absolute;
 }
-.inset-0 {
-	top: 0px;
-	right: 0px;
-	bottom: 0px;
-	left: 0px;
+.m-60 {
+	margin: 15rem;
 }
 .mx-auto {
 	margin-left: auto;
@@ -614,11 +611,23 @@ video {
 	margin-top: 2.5rem;
 	margin-bottom: 2.5rem;
 }
+.-ml-px {
+	margin-left: -1px;
+}
 .mt-1 {
 	margin-top: 0.25rem;
 }
 .mt-3 {
 	margin-top: 0.75rem;
+}
+.mt-14 {
+	margin-top: 3.5rem;
+}
+.mt-8 {
+	margin-top: 2rem;
+}
+.mt-5 {
+	margin-top: 1.25rem;
 }
 .mt-10 {
 	margin-top: 2.5rem;
@@ -632,6 +641,9 @@ video {
 .flex {
 	display: flex;
 }
+.grid {
+	display: grid;
+}
 .block {
 	display: block;
 }
@@ -644,11 +656,11 @@ video {
 .h-16 {
 	height: 4rem;
 }
-.h-full {
-	height: 100%;
+.h-9 {
+	height: 2.25rem;
 }
-.h-screen {
-	height: 100vh;
+.w-12 {
+	width: 3rem;
 }
 .w-4\/5 {
 	width: 80%;
@@ -659,60 +671,17 @@ video {
 .w-16 {
 	width: 4rem;
 }
-.w-11\/12 {
-	width: 91.666667%;
+.w-9 {
+	width: 2.25rem;
 }
-.w-screen {
-	width: 100vw;
+.w-10 {
+	width: 2.5rem;
 }
-.w-4\/12 {
-	width: 33.333333%;
+.cursor-pointer {
+	cursor: pointer;
 }
-.w-1\/3 {
-	width: 33.333333%;
-}
-.w-96 {
-	width: 24rem;
-}
-.w-80 {
-	width: 20rem;
-}
-.w-auto {
-	width: auto;
-}
-.w-1\/2 {
-	width: 50%;
-}
-.w-2\/3 {
-	width: 66.666667%;
-}
-.w-3\/4 {
-	width: 75%;
-}
-.w-2\/12 {
-	width: 16.666667%;
-}
-.w-3\/12 {
-	width: 25%;
-}
-.transform {
-	--tw-translate-x: 0;
-	--tw-translate-y: 0;
-	--tw-rotate: 0;
-	--tw-skew-x: 0;
-	--tw-skew-y: 0;
-	--tw-scale-x: 1;
-	--tw-scale-y: 1;
-	transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.translate-x-0 {
-	--tw-translate-x: 0px;
-}
-.translate-x-full {
-	--tw-translate-x: 100%;
-}
-.-translate-x-full {
-	--tw-translate-x: -100%;
+.grid-cols-1 {
+	grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -726,15 +695,6 @@ video {
 .justify-between {
 	justify-content: space-between;
 }
-.justify-center {
-	justify-content: center;
-}
-.justify-around {
-	justify-content: space-around;
-}
-.justify-evenly {
-	justify-content: space-evenly;
-}
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(1rem * var(--tw-space-x-reverse));
@@ -744,21 +704,6 @@ video {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-.space-x-12 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(3rem * var(--tw-space-x-reverse));
-	margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-x-24 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(6rem * var(--tw-space-x-reverse));
-	margin-left: calc(6rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-y-10 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
 }
 .space-y-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
@@ -770,18 +715,10 @@ video {
 	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
-.space-x-8 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(2rem * var(--tw-space-x-reverse));
-	margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
-}
 .space-x-5 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(1.25rem * var(--tw-space-x-reverse));
 	margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.overflow-hidden {
-	overflow: hidden;
 }
 .rounded-md {
 	border-radius: 0.375rem;
@@ -792,19 +729,34 @@ video {
 .rounded {
 	border-radius: 0.25rem;
 }
-.rounded-sm {
-	border-radius: 0.125rem;
+.rounded-l-md {
+	border-top-left-radius: 0.375rem;
+	border-bottom-left-radius: 0.375rem;
+}
+.rounded-r-md {
+	border-top-right-radius: 0.375rem;
+	border-bottom-right-radius: 0.375rem;
 }
 .border {
 	border-width: 1px;
 }
-.border-gray-100 {
+.border-t-2 {
+	border-top-width: 2px;
+}
+.border-dotted {
+	border-style: dotted;
+}
+.border-gray-500 {
 	--tw-border-opacity: 1;
-	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
+	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }
 .border-gray-400 {
 	--tw-border-opacity: 1;
 	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
+}
+.border-gray-100 {
+	--tw-border-opacity: 1;
+	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
 .bg-red-sbtn {
 	--tw-bg-opacity: 1;
@@ -830,30 +782,17 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
 }
-.bg-purple-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(139, 92, 246, var(--tw-bg-opacity));
-}
 .bg-cover {
 	background-size: cover;
 }
 .bg-center {
 	background-position: center;
 }
-.bg-no-repeat {
-	background-repeat: no-repeat;
-}
 .fill-current {
 	fill: currentColor;
 }
 .p-3 {
 	padding: 0.75rem;
-}
-.p-1 {
-	padding: 0.25rem;
-}
-.p-4 {
-	padding: 1rem;
 }
 .px-6 {
 	padding-left: 1.5rem;
@@ -887,11 +826,11 @@ video {
 .pt-3 {
 	padding-top: 0.75rem;
 }
-.pl-4 {
-	padding-left: 1rem;
+.pl-7 {
+	padding-left: 1.75rem;
 }
-.pr-4 {
-	padding-right: 1rem;
+.pr-7 {
+	padding-right: 1.75rem;
 }
 .pt-2 {
 	padding-top: 0.5rem;
@@ -899,17 +838,23 @@ video {
 .pb-2 {
 	padding-bottom: 0.5rem;
 }
-.pl-6 {
-	padding-left: 1.5rem;
+.pl-4 {
+	padding-left: 1rem;
 }
-.pr-6 {
-	padding-right: 1.5rem;
+.pr-4 {
+	padding-right: 1rem;
 }
-.pl-7 {
-	padding-left: 1.75rem;
+.pl-2 {
+	padding-left: 0.5rem;
 }
-.pr-7 {
-	padding-right: 1.75rem;
+.pl-1 {
+	padding-left: 0.25rem;
+}
+.pt-1 {
+	padding-top: 0.25rem;
+}
+.text-center {
+	text-align: center;
 }
 .text-2xl {
 	font-size: 1.5rem;
@@ -918,6 +863,18 @@ video {
 .text-sm {
 	font-size: 0.875rem;
 	line-height: 1.25rem;
+}
+.text-4xl {
+	font-size: 2.25rem;
+	line-height: 2.5rem;
+}
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
+}
+.text-base {
+	font-size: 1rem;
+	line-height: 1.5rem;
 }
 .text-5xl {
 	font-size: 3rem;
@@ -935,10 +892,6 @@ video {
 	font-size: 0.75rem;
 	line-height: 1rem;
 }
-.text-4xl {
-	font-size: 2.25rem;
-	line-height: 2.5rem;
-}
 .font-extrabold {
 	font-weight: 800;
 }
@@ -947,6 +900,9 @@ video {
 }
 .font-bold {
 	font-weight: 700;
+}
+.font-medium {
+	font-weight: 500;
 }
 .font-light {
 	font-weight: 300;
@@ -957,20 +913,20 @@ video {
 .leading-8 {
 	line-height: 2rem;
 }
+.leading-normal {
+	line-height: 1.5;
+}
 .leading-tight {
 	line-height: 1.25;
-}
-.leading-relaxed {
-	line-height: 1.625;
 }
 .tracking-widest {
 	letter-spacing: 0.1em;
 }
-.tracking-wide {
-	letter-spacing: 0.025em;
-}
 .tracking-tight {
 	letter-spacing: -0.025em;
+}
+.tracking-wide {
+	letter-spacing: 0.025em;
 }
 .text-gray-navalink {
 	--tw-text-opacity: 1;
@@ -984,38 +940,20 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
-.text-pink-500 {
-	--tw-text-opacity: 1;
-	color: rgba(236, 72, 153, var(--tw-text-opacity));
-}
 .text-gray-slidertext {
 	--tw-text-opacity: 1;
 	color: rgba(98, 97, 97, var(--tw-text-opacity));
+}
+.text-pink-500 {
+	--tw-text-opacity: 1;
+	color: rgba(236, 72, 153, var(--tw-text-opacity));
 }
 .shadow-lg {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.transition {
-	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-	transition-duration: 150ms;
-}
-.transition-all {
-	transition-property: all;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-	transition-duration: 150ms;
-}
-.duration-1000 {
-	transition-duration: 1000ms;
-}
 .ease-linear {
 	transition-timing-function: linear;
-}
-.ease-in-out {
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -1031,108 +969,46 @@ video {
 }
 
 
+.rating-stars ul > li.star {
+  display:inline-block;
+  
+}
 
+/* Idle State of the stars */
+.rating-stars ul > li.star > i.fas {
+   font-size: 15px;/* Change the size of the stars */
+  color:#ccc; /* Color on idle state */
+}
 
+/* Hover state of the stars */
+.rating-stars ul > li.star.hover > i.fas {
+  color:#ffce85;
+}
 
-
-
-
+/* Selected state of the stars */
+.rating-stars ul > li.star.selected > i.fas {
+  color:#FFBD5A;
+}
 .hover\:border:hover {
 	border-width: 1px;
 }
-
-
-
-
-
-
-
-
 .hover\:border-yellow-400:hover {
 	--tw-border-opacity: 1;
 	border-color: rgba(251, 191, 36, var(--tw-border-opacity));
 }
-
-
-
-
-
-
-
-
 .hover\:bg-blue-600:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
 }
-
-
-
-
-
-
-
-
 .hover\:bg-black:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
-
-
-
-
-
-
-
-
 @media (min-width: 768px) {
-
-	.md\:container {
-		width: 100%;
-	}
-
-	@media (min-width: 640px) {
-
-		.md\:container {
-			max-width: 640px;
-		}
-	}
-
-	@media (min-width: 768px) {
-
-		.md\:container {
-			max-width: 768px;
-		}
-	}
-
-	@media (min-width: 1024px) {
-
-		.md\:container {
-			max-width: 1024px;
-		}
-	}
-
-	@media (min-width: 1280px) {
-
-		.md\:container {
-			max-width: 1280px;
-		}
-	}
-
-	@media (min-width: 1536px) {
-
-		.md\:container {
-			max-width: 1536px;
-		}
-	}
 
 	.md\:mx-10 {
 		margin-left: 2.5rem;
 		margin-right: 2.5rem;
-	}
-
-	.md\:mx-auto {
-		margin-left: auto;
-		margin-right: auto;
 	}
 
 	.md\:-mt-2 {
@@ -1155,12 +1031,6 @@ video {
 		justify-content: center;
 	}
 
-	.md\:space-x-28 > :not([hidden]) ~ :not([hidden]) {
-		--tw-space-x-reverse: 0;
-		margin-right: calc(7rem * var(--tw-space-x-reverse));
-		margin-left: calc(7rem * calc(1 - var(--tw-space-x-reverse)));
-	}
-
 	.md\:space-x-16 > :not([hidden]) ~ :not([hidden]) {
 		--tw-space-x-reverse: 0;
 		margin-right: calc(4rem * var(--tw-space-x-reverse));
@@ -1180,14 +1050,6 @@ video {
 		padding-right: 5rem;
 	}
 }
-
-
-
-
-
-
-
-
 @media (min-width: 1024px) {
 
 	.lg\:container {
@@ -1246,20 +1108,16 @@ video {
 		display: inline-flex;
 	}
 
-	.lg\:flex {
-		display: flex;
-	}
-
 	.lg\:hidden {
 		display: none;
 	}
 
-	.lg\:w-auto {
-		width: auto;
-	}
-
 	.lg\:w-3\/12 {
 		width: 25%;
+	}
+
+	.lg\:w-auto {
+		width: auto;
 	}
 
 	.lg\:flex-grow {
@@ -1268,14 +1126,6 @@ video {
 
 	.lg\:flex-row {
 		flex-direction: row;
-	}
-
-	.lg\:items-center {
-		align-items: center;
-	}
-
-	.lg\:justify-center {
-		justify-content: center;
 	}
 
 	.lg\:space-x-7 > :not([hidden]) ~ :not([hidden]) {
