--- a/css/styles.css
+++ b/css/styles.css
@@ -590,12 +590,6 @@ video {
 		max-width: 1536px;
 	}
 }
-.relative {
-	position: relative;
-}
-.absolute {
-	position: absolute;
-}
 .m-60 {
 	margin: 15rem;
 }
@@ -653,14 +647,14 @@ video {
 .hidden {
 	display: none;
 }
-.h-16 {
-	height: 4rem;
-}
 .h-9 {
 	height: 2.25rem;
 }
-.w-12 {
-	width: 3rem;
+.h-16 {
+	height: 4rem;
+}
+.w-10 {
+	width: 2.5rem;
 }
 .w-4\/5 {
 	width: 80%;
@@ -670,12 +664,6 @@ video {
 }
 .w-16 {
 	width: 4rem;
-}
-.w-9 {
-	width: 2.25rem;
-}
-.w-10 {
-	width: 2.5rem;
 }
 .cursor-pointer {
 	cursor: pointer;
@@ -719,6 +707,9 @@ video {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(1.25rem * var(--tw-space-x-reverse));
 	margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.overflow-hidden {
+	overflow: hidden;
 }
 .rounded-md {
 	border-radius: 0.375rem;
@@ -814,6 +805,15 @@ video {
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
 }
+.pl-1 {
+	padding-left: 0.25rem;
+}
+.pt-1 {
+	padding-top: 0.25rem;
+}
+.pl-2 {
+	padding-left: 0.5rem;
+}
 .pl-5 {
 	padding-left: 1.25rem;
 }
@@ -843,15 +843,6 @@ video {
 }
 .pr-4 {
 	padding-right: 1rem;
-}
-.pl-2 {
-	padding-left: 0.5rem;
-}
-.pl-1 {
-	padding-left: 0.25rem;
-}
-.pt-1 {
-	padding-top: 0.25rem;
 }
 .text-center {
 	text-align: center;
@@ -989,21 +980,76 @@ video {
 .rating-stars ul > li.star.selected > i.fas {
   color:#FFBD5A;
 }
+
+
+/*Shafi*/
+.carousel{
+  position: relative;
+}
+
+.carousel .carousel-item,
+.carousel .carousel-item--hidden{
+  display: none;
+}
+.carousel .carousel-action{
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+}
+.carousel .carousel-action button{
+  background-color: #F5F5F5;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+}
+.carousel .carousel-active{
+  display: flex;
+  -webkit-animation: slide 0.5s;
+          animation: slide 0.5s;
+}
+
+@-webkit-keyframes slide {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: opacity linear;
+  }
+}
+
+@keyframes slide {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: opacity linear;
+  }
+}
+
 .hover\:border:hover {
 	border-width: 1px;
 }
+
 .hover\:border-yellow-400:hover {
 	--tw-border-opacity: 1;
 	border-color: rgba(251, 191, 36, var(--tw-border-opacity));
 }
+
 .hover\:bg-blue-600:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
 }
+
 .hover\:bg-black:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
+
 @media (min-width: 768px) {
 
 	.md\:mx-10 {
@@ -1050,6 +1096,7 @@ video {
 		padding-right: 5rem;
 	}
 }
+
 @media (min-width: 1024px) {
 
 	.lg\:container {
@@ -1142,5 +1189,6 @@ video {
 		padding-right: 4rem;
 	}
 }
+
 
 
