--- a/css/styles.css
+++ b/css/styles.css
@@ -629,6 +629,9 @@ video {
 .mt-5 {
 	margin-top: 1.25rem;
 }
+.mt-7 {
+	margin-top: 1.75rem;
+}
 .mt-10 {
 	margin-top: 2.5rem;
 }
@@ -637,6 +640,60 @@ video {
 }
 .ml-auto {
 	margin-left: auto;
+}
+.-ml-1 {
+	margin-left: -0.25rem;
+}
+.-ml-2 {
+	margin-left: -0.5rem;
+}
+.-ml-3 {
+	margin-left: -0.75rem;
+}
+.-ml-1\.5 {
+	margin-left: -0.375rem;
+}
+.mr-5 {
+	margin-right: 1.25rem;
+}
+.-mt-96 {
+	margin-top: -24rem;
+}
+.-mt-80 {
+	margin-top: -20rem;
+}
+.ml-56 {
+	margin-left: 14rem;
+}
+.-mt-72 {
+	margin-top: -18rem;
+}
+.ml-60 {
+	margin-left: 15rem;
+}
+.ml-64 {
+	margin-left: 16rem;
+}
+.-mt-64 {
+	margin-top: -16rem;
+}
+.-mt-44 {
+	margin-top: -11rem;
+}
+.ml-28 {
+	margin-left: 7rem;
+}
+.ml-44 {
+	margin-left: 11rem;
+}
+.-mt-28 {
+	margin-top: -7rem;
+}
+.-mt-32 {
+	margin-top: -8rem;
+}
+.-mt-24 {
+	margin-top: -6rem;
 }
 .flex {
 	display: flex;
@@ -653,14 +710,14 @@ video {
 .hidden {
 	display: none;
 }
-.h-16 {
-	height: 4rem;
-}
 .h-9 {
 	height: 2.25rem;
 }
-.w-12 {
-	width: 3rem;
+.h-16 {
+	height: 4rem;
+}
+.w-10 {
+	width: 2.5rem;
 }
 .w-4\/5 {
 	width: 80%;
@@ -671,17 +728,29 @@ video {
 .w-16 {
 	width: 4rem;
 }
-.w-9 {
-	width: 2.25rem;
+.w-80 {
+	width: 20rem;
 }
-.w-10 {
-	width: 2.5rem;
+.w-96 {
+	width: 24rem;
+}
+.w-2\/3 {
+	width: 66.666667%;
+}
+.w-1\/3 {
+	width: 33.333333%;
+}
+.w-2\/4 {
+	width: 50%;
 }
 .cursor-pointer {
 	cursor: pointer;
 }
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-2 {
+	grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -719,6 +788,16 @@ video {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(1.25rem * var(--tw-space-x-reverse));
 	margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-11 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(2.75rem * var(--tw-space-x-reverse));
+	margin-left: calc(2.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-10 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .rounded-md {
 	border-radius: 0.375rem;
@@ -814,6 +893,15 @@ video {
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
 }
+.pl-1 {
+	padding-left: 0.25rem;
+}
+.pt-1 {
+	padding-top: 0.25rem;
+}
+.pl-2 {
+	padding-left: 0.5rem;
+}
 .pl-5 {
 	padding-left: 1.25rem;
 }
@@ -844,18 +932,6 @@ video {
 .pr-4 {
 	padding-right: 1rem;
 }
-.pl-2 {
-	padding-left: 0.5rem;
-}
-.pl-1 {
-	padding-left: 0.25rem;
-}
-.pt-1 {
-	padding-top: 0.25rem;
-}
-.text-center {
-	text-align: center;
-}
 .text-2xl {
 	font-size: 1.5rem;
 	line-height: 2rem;
@@ -876,6 +952,10 @@ video {
 	font-size: 1rem;
 	line-height: 1.5rem;
 }
+.text-xs {
+	font-size: 0.75rem;
+	line-height: 1rem;
+}
 .text-5xl {
 	font-size: 3rem;
 	line-height: 1;
@@ -887,10 +967,6 @@ video {
 .text-xl {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
-}
-.text-xs {
-	font-size: 0.75rem;
-	line-height: 1rem;
 }
 .font-extrabold {
 	font-weight: 800;
@@ -968,6 +1044,11 @@ video {
   src: local('ProximaNova'), url(./font/ProximaNova-Regular.otf) format('otf');
 }
 
+.page-container{
+  width: 70%;
+  margin: 0 auto;
+}
+
 
 .rating-stars ul > li.star {
   display:inline-block;
@@ -976,7 +1057,7 @@ video {
 
 /* Idle State of the stars */
 .rating-stars ul > li.star > i.fas {
-   font-size: 15px;/* Change the size of the stars */
+   font-size: 10px;/* Change the size of the stars */
   color:#ccc; /* Color on idle state */
 }
 
@@ -1003,6 +1084,22 @@ video {
 .hover\:bg-black:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+.focus\:outline-white:focus {
+	outline: 2px dotted white;
+	outline-offset: 2px;
+}
+.focus\:outline-none:focus {
+	outline: 2px solid transparent;
+	outline-offset: 2px;
+}
+.active\:outline-none:active {
+	outline: 2px solid transparent;
+	outline-offset: 2px;
+}
+.active\:outline-white:active {
+	outline: 2px dotted white;
+	outline-offset: 2px;
 }
 @media (min-width: 768px) {
 
@@ -1096,6 +1193,18 @@ video {
 		margin-right: auto;
 	}
 
+	.lg\:mr-9 {
+		margin-right: 2.25rem;
+	}
+
+	.lg\:ml-24 {
+		margin-left: 6rem;
+	}
+
+	.lg\:mr-32 {
+		margin-right: 8rem;
+	}
+
 	.lg\:ml-auto {
 		margin-left: auto;
 	}
@@ -1124,6 +1233,10 @@ video {
 		flex-grow: 1;
 	}
 
+	.lg\:grid-cols-2 {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
 	.lg\:flex-row {
 		flex-direction: row;
 	}
@@ -1141,6 +1254,18 @@ video {
 	.lg\:pr-16 {
 		padding-right: 4rem;
 	}
+
+	.lg\:text-base {
+		font-size: 1rem;
+		line-height: 1.5rem;
+	}
+
+	.lg\:text-sm {
+		font-size: 0.875rem;
+		line-height: 1.25rem;
+	}
 }
+
+
 
 
