--- a/css/glide.core.css
+++ b/css/glide.core.css
@@ -1,32 +1,35 @@
 .glide {
   position: relative;
-  width: 100%;
-  box-sizing: border-box; }
+  /* width: 100%; */
+  box-sizing: border-box;
+ }
   .glide * {
-    box-sizing: inherit; }
+    box-sizing: inherit; 
+  }
   .glide__track {
-    overflow: hidden; }
+    overflow: hidden; 
+  }
   .glide__slides {
     position: relative;
-    width: 100%;
+    /* width: 100%; */
     list-style: none;
     backface-visibility: hidden;
     transform-style: preserve-3d;
     touch-action: pan-Y;
     overflow: hidden;
-    padding: 0;
-    white-space: nowrap;
+    /* padding: 0; */
+    white-space: nowrap; 
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     will-change: transform; }
     .glide__slides--dragging {
       user-select: none; }
   .glide__slide {
-    width: 100%;
-    height: 100%;
-    flex-shrink: 0;
-    white-space: normal;
-    user-select: none;
+    /* width: 100%; */
+    /* height: 100%; */
+    /* flex-shrink: 0; */
+    /* white-space: normal;
+    user-select: none; */
     -webkit-touch-callout: none;
     -webkit-tap-highlight-color: transparent; }
     .glide__slide a {
