--- a/css/styles.css
+++ b/css/styles.css
@@ -590,11 +590,32 @@ video {
 		max-width: 1536px;
 	}
 }
+.absolute {
+	position: absolute;
+}
 .relative {
 	position: relative;
 }
-.absolute {
-	position: absolute;
+.top-1\/2 {
+	top: 50%;
+}
+.right-0 {
+	right: 0px;
+}
+.right-backboardW {
+	right: 265px;
+}
+.top-11 {
+	top: 2.75rem;
+}
+.z-0 {
+	z-index: 0;
+}
+.z-10 {
+	z-index: 10;
+}
+.z-30 {
+	z-index: 30;
 }
 .m-60 {
 	margin: 15rem;
@@ -620,9 +641,6 @@ video {
 .mt-3 {
 	margin-top: 0.75rem;
 }
-.mt-14 {
-	margin-top: 3.5rem;
-}
 .mt-8 {
 	margin-top: 2rem;
 }
@@ -631,6 +649,21 @@ video {
 }
 .mt-7 {
 	margin-top: 1.75rem;
+}
+.mr-5 {
+	margin-right: 1.25rem;
+}
+.-mt-80 {
+	margin-top: -20rem;
+}
+.ml-64 {
+	margin-left: 16rem;
+}
+.-mt-24 {
+	margin-top: -6rem;
+}
+.ml-60 {
+	margin-left: 15rem;
 }
 .mt-10 {
 	margin-top: 2.5rem;
@@ -641,59 +674,59 @@ video {
 .ml-auto {
 	margin-left: auto;
 }
-.-ml-1 {
-	margin-left: -0.25rem;
+.ml-96 {
+	margin-left: 24rem;
 }
-.-ml-2 {
-	margin-left: -0.5rem;
-}
-.-ml-3 {
-	margin-left: -0.75rem;
-}
-.-ml-1\.5 {
-	margin-left: -0.375rem;
-}
-.mr-5 {
-	margin-right: 1.25rem;
-}
-.-mt-96 {
-	margin-top: -24rem;
-}
-.-mt-80 {
-	margin-top: -20rem;
-}
-.ml-56 {
-	margin-left: 14rem;
-}
-.-mt-72 {
-	margin-top: -18rem;
-}
-.ml-60 {
-	margin-left: 15rem;
-}
-.ml-64 {
-	margin-left: 16rem;
-}
-.-mt-64 {
-	margin-top: -16rem;
-}
-.-mt-44 {
-	margin-top: -11rem;
+.ml-52 {
+	margin-left: 13rem;
 }
 .ml-28 {
 	margin-left: 7rem;
 }
-.ml-44 {
-	margin-left: 11rem;
+.mr-28 {
+	margin-right: 7rem;
 }
-.-mt-28 {
-	margin-top: -7rem;
+.mr-52 {
+	margin-right: 13rem;
 }
-.-mt-32 {
-	margin-top: -8rem;
+.mr-80 {
+	margin-right: 20rem;
 }
-.-mt-24 {
-	margin-top: -6rem;
+.mr-72 {
+	margin-right: 18rem;
+}
+.mr-60 {
+	margin-right: 15rem;
+}
+.mr-64 {
+	margin-right: 16rem;
+}
+.mr-56 {
+	margin-right: 14rem;
+}
+.mr-48 {
+	margin-right: 12rem;
+}
+.mt-11 {
+	margin-top: 2.75rem;
+}
+.mt-16 {
+	margin-top: 4rem;
+}
+.mt-20 {
+	margin-top: 5rem;
+}
+.mt-12 {
+	margin-top: 3rem;
+}
+.mt-24 {
+	margin-top: 6rem;
+}
+.mt-32 {
+	margin-top: 8rem;
+}
+.mt-36 {
+	margin-top: 9rem;
 }
 .flex {
 	display: flex;
@@ -713,44 +746,56 @@ video {
 .h-9 {
 	height: 2.25rem;
 }
+.h-5\/6 {
+	height: 83.333333%;
+}
 .h-16 {
 	height: 4rem;
+}
+.h-10 {
+	height: 2.5rem;
+}
+.h-20 {
+	height: 5rem;
+}
+.h-12 {
+	height: 3rem;
 }
 .w-10 {
 	width: 2.5rem;
 }
-.w-4\/5 {
-	width: 80%;
+.w-6\/12 {
+	width: 50%;
 }
 .w-full {
 	width: 100%;
 }
+.w-2\/4 {
+	width: 50%;
+}
+.w-4\/5 {
+	width: 80%;
+}
 .w-16 {
 	width: 4rem;
 }
-.w-80 {
-	width: 20rem;
+.w-20 {
+	width: 5rem;
 }
-.w-96 {
-	width: 24rem;
+.w-12 {
+	width: 3rem;
 }
-.w-2\/3 {
+.w-7\/12 {
+	width: 58.333333%;
+}
+.w-8\/12 {
 	width: 66.666667%;
-}
-.w-1\/3 {
-	width: 33.333333%;
-}
-.w-2\/4 {
-	width: 50%;
 }
 .cursor-pointer {
 	cursor: pointer;
 }
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-.grid-cols-2 {
-	grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -761,8 +806,22 @@ video {
 .items-center {
 	align-items: center;
 }
+.justify-end {
+	justify-content: flex-end;
+}
 .justify-between {
 	justify-content: space-between;
+}
+.justify-items-end {
+	justify-items: end;
+}
+.gap-x-20 {
+	-moz-column-gap: 5rem;
+	     column-gap: 5rem;
+}
+.gap-x-10 {
+	-moz-column-gap: 2.5rem;
+	     column-gap: 2.5rem;
 }
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
@@ -774,10 +833,10 @@ video {
 	margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
-.space-y-8 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+.space-x-20 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(5rem * var(--tw-space-x-reverse));
+	margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
@@ -798,6 +857,11 @@ video {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(2.5rem * var(--tw-space-x-reverse));
 	margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-5 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 .rounded-md {
 	border-radius: 0.375rem;
@@ -837,6 +901,10 @@ video {
 	--tw-border-opacity: 1;
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
+.border-black {
+	--tw-border-opacity: 1;
+	border-color: rgba(0, 0, 0, var(--tw-border-opacity));
+}
 .bg-red-sbtn {
 	--tw-bg-opacity: 1;
 	background-color: rgba(223, 57, 64, var(--tw-bg-opacity));
@@ -869,6 +937,9 @@ video {
 }
 .fill-current {
 	fill: currentColor;
+}
+.p-2 {
+	padding: 0.5rem;
 }
 .p-3 {
 	padding: 0.75rem;
@@ -914,23 +985,20 @@ video {
 .pt-3 {
 	padding-top: 0.75rem;
 }
-.pl-7 {
-	padding-left: 1.75rem;
+.pl-10 {
+	padding-left: 2.5rem;
 }
-.pr-7 {
-	padding-right: 1.75rem;
+.pr-10 {
+	padding-right: 2.5rem;
+}
+.pb-4 {
+	padding-bottom: 1rem;
+}
+.pr-2 {
+	padding-right: 0.5rem;
 }
 .pt-2 {
 	padding-top: 0.5rem;
-}
-.pb-2 {
-	padding-bottom: 0.5rem;
-}
-.pl-4 {
-	padding-left: 1rem;
-}
-.pr-4 {
-	padding-right: 1rem;
 }
 .text-2xl {
 	font-size: 1.5rem;
@@ -939,10 +1007,6 @@ video {
 .text-sm {
 	font-size: 0.875rem;
 	line-height: 1.25rem;
-}
-.text-4xl {
-	font-size: 2.25rem;
-	line-height: 2.5rem;
 }
 .text-3xl {
 	font-size: 1.875rem;
@@ -955,6 +1019,10 @@ video {
 .text-xs {
 	font-size: 0.75rem;
 	line-height: 1rem;
+}
+.text-4xl {
+	font-size: 2.25rem;
+	line-height: 2.5rem;
 }
 .text-5xl {
 	font-size: 3rem;
@@ -997,9 +1065,6 @@ video {
 }
 .tracking-widest {
 	letter-spacing: 0.1em;
-}
-.tracking-tight {
-	letter-spacing: -0.025em;
 }
 .tracking-wide {
 	letter-spacing: 0.025em;
@@ -1085,20 +1150,8 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
-.focus\:outline-white:focus {
-	outline: 2px dotted white;
-	outline-offset: 2px;
-}
 .focus\:outline-none:focus {
 	outline: 2px solid transparent;
-	outline-offset: 2px;
-}
-.active\:outline-none:active {
-	outline: 2px solid transparent;
-	outline-offset: 2px;
-}
-.active\:outline-white:active {
-	outline: 2px dotted white;
 	outline-offset: 2px;
 }
 @media (min-width: 768px) {
@@ -1112,11 +1165,43 @@ video {
 		margin-top: -0.5rem;
 	}
 
+	.md\:ml-28 {
+		margin-left: 7rem;
+	}
+
+	.md\:mr-48 {
+		margin-right: 12rem;
+	}
+
 	.md\:flex {
 		display: flex;
 	}
 
+	.md\:w-2\/6 {
+		width: 33.333333%;
+	}
+
 	.md\:w-1\/2 {
+		width: 50%;
+	}
+
+	.md\:w-1\/6 {
+		width: 16.666667%;
+	}
+
+	.md\:w-5\/12 {
+		width: 41.666667%;
+	}
+
+	.md\:w-4\/12 {
+		width: 33.333333%;
+	}
+
+	.md\:w-3\/12 {
+		width: 25%;
+	}
+
+	.md\:w-6\/12 {
 		width: 50%;
 	}
 
@@ -1128,10 +1213,8 @@ video {
 		justify-content: center;
 	}
 
-	.md\:space-x-16 > :not([hidden]) ~ :not([hidden]) {
-		--tw-space-x-reverse: 0;
-		margin-right: calc(4rem * var(--tw-space-x-reverse));
-		margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
+	.md\:justify-between {
+		justify-content: space-between;
 	}
 
 	.md\:border {
@@ -1193,10 +1276,6 @@ video {
 		margin-right: auto;
 	}
 
-	.lg\:mr-9 {
-		margin-right: 2.25rem;
-	}
-
 	.lg\:ml-24 {
 		margin-left: 6rem;
 	}
@@ -1209,6 +1288,14 @@ video {
 		margin-left: auto;
 	}
 
+	.lg\:ml-28 {
+		margin-left: 7rem;
+	}
+
+	.lg\:mr-48 {
+		margin-right: 12rem;
+	}
+
 	.lg\:block {
 		display: block;
 	}
@@ -1217,12 +1304,16 @@ video {
 		display: inline-flex;
 	}
 
-	.lg\:hidden {
-		display: none;
+	.lg\:grid {
+		display: grid;
 	}
 
-	.lg\:w-3\/12 {
-		width: 25%;
+	.lg\:flex {
+		display: flex;
+	}
+
+	.lg\:hidden {
+		display: none;
 	}
 
 	.lg\:w-auto {
@@ -1239,6 +1330,22 @@ video {
 
 	.lg\:flex-row {
 		flex-direction: row;
+	}
+
+	.lg\:items-center {
+		align-items: center;
+	}
+
+	.lg\:justify-between {
+		justify-content: space-between;
+	}
+
+	.lg\:justify-items-end {
+		justify-items: end;
+	}
+
+	.lg\:justify-items-start {
+		justify-items: start;
 	}
 
 	.lg\:space-x-7 > :not([hidden]) ~ :not([hidden]) {
@@ -1263,6 +1370,33 @@ video {
 	.lg\:text-sm {
 		font-size: 0.875rem;
 		line-height: 1.25rem;
+	}
+
+	.lg\:font-semibold {
+		font-weight: 600;
+	}
+}
+@media (min-width: 1280px) {
+
+	.xl\:mr-12 {
+		margin-right: 3rem;
+	}
+
+	.xl\:mr-16 {
+		margin-right: 4rem;
+	}
+
+	.xl\:mr-20 {
+		margin-right: 5rem;
+	}
+
+	.xl\:mr-24 {
+		margin-right: 6rem;
+	}
+
+	.xl\:px-20 {
+		padding-left: 5rem;
+		padding-right: 5rem;
 	}
 }
 
