--- a/css/styles.css
+++ b/css/styles.css
@@ -599,15 +599,6 @@ video {
 .top-1\/2 {
 	top: 50%;
 }
-.right-0 {
-	right: 0px;
-}
-.right-backboardW {
-	right: 265px;
-}
-.top-11 {
-	top: 2.75rem;
-}
 .z-0 {
 	z-index: 0;
 }
@@ -641,17 +632,29 @@ video {
 .mt-3 {
 	margin-top: 0.75rem;
 }
-.mt-8 {
-	margin-top: 2rem;
+.mt-20 {
+	margin-top: 5rem;
+}
+.mt-16 {
+	margin-top: 4rem;
 }
 .mt-5 {
 	margin-top: 1.25rem;
 }
-.mt-7 {
-	margin-top: 1.75rem;
+.mt-10 {
+	margin-top: 2.5rem;
+}
+.mt-24 {
+	margin-top: 6rem;
+}
+.mt-36 {
+	margin-top: 9rem;
 }
 .mr-5 {
 	margin-right: 1.25rem;
+}
+.mt-11 {
+	margin-top: 2.75rem;
 }
 .-mt-80 {
 	margin-top: -20rem;
@@ -665,74 +668,14 @@ video {
 .ml-60 {
 	margin-left: 15rem;
 }
-.mt-10 {
-	margin-top: 2.5rem;
-}
 .mr-2 {
 	margin-right: 0.5rem;
 }
 .ml-auto {
 	margin-left: auto;
 }
-.ml-96 {
-	margin-left: 24rem;
-}
-.ml-52 {
-	margin-left: 13rem;
-}
-.ml-28 {
-	margin-left: 7rem;
-}
-.mr-28 {
-	margin-right: 7rem;
-}
-.mr-52 {
-	margin-right: 13rem;
-}
-.mr-80 {
-	margin-right: 20rem;
-}
-.mr-72 {
-	margin-right: 18rem;
-}
-.mr-60 {
-	margin-right: 15rem;
-}
-.mr-64 {
-	margin-right: 16rem;
-}
-.mr-56 {
-	margin-right: 14rem;
-}
-.mr-48 {
-	margin-right: 12rem;
-}
-.mt-11 {
-	margin-top: 2.75rem;
-}
-.mt-16 {
-	margin-top: 4rem;
-}
-.mt-20 {
-	margin-top: 5rem;
-}
-.mt-12 {
-	margin-top: 3rem;
-}
-.mt-24 {
-	margin-top: 6rem;
-}
-.mt-32 {
-	margin-top: 8rem;
-}
-.mt-36 {
-	margin-top: 9rem;
-}
 .flex {
 	display: flex;
-}
-.grid {
-	display: grid;
 }
 .block {
 	display: block;
@@ -749,17 +692,26 @@ video {
 .h-5\/6 {
 	height: 83.333333%;
 }
+.h-12 {
+	height: 3rem;
+}
 .h-16 {
 	height: 4rem;
 }
-.h-10 {
-	height: 2.5rem;
+.h-2 {
+	height: 0.5rem;
 }
-.h-20 {
-	height: 5rem;
+.h-1 {
+	height: 0.25rem;
 }
-.h-12 {
-	height: 3rem;
+.h-0\.5 {
+	height: 0.125rem;
+}
+.h-0 {
+	height: 0px;
+}
+.h-5 {
+	height: 1.25rem;
 }
 .w-10 {
 	width: 2.5rem;
@@ -770,6 +722,12 @@ video {
 .w-full {
 	width: 100%;
 }
+.w-12 {
+	width: 3rem;
+}
+.w-7\/12 {
+	width: 58.333333%;
+}
 .w-2\/4 {
 	width: 50%;
 }
@@ -779,23 +737,29 @@ video {
 .w-16 {
 	width: 4rem;
 }
-.w-20 {
-	width: 5rem;
+.w-40 {
+	width: 10rem;
 }
-.w-12 {
-	width: 3rem;
+.w-52 {
+	width: 13rem;
 }
-.w-7\/12 {
-	width: 58.333333%;
+.w-44 {
+	width: 11rem;
 }
-.w-8\/12 {
-	width: 66.666667%;
+.w-36 {
+	width: 9rem;
+}
+.w-56 {
+	width: 14rem;
+}
+.w-60 {
+	width: 15rem;
+}
+.w-64 {
+	width: 16rem;
 }
 .cursor-pointer {
 	cursor: pointer;
-}
-.grid-cols-1 {
-	grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -806,22 +770,23 @@ video {
 .items-center {
 	align-items: center;
 }
-.justify-end {
-	justify-content: flex-end;
-}
 .justify-between {
 	justify-content: space-between;
 }
-.justify-items-end {
-	justify-items: end;
+.justify-center {
+	justify-content: center;
 }
-.gap-x-20 {
-	-moz-column-gap: 5rem;
-	     column-gap: 5rem;
+.justify-end {
+	justify-content: flex-end;
 }
-.gap-x-10 {
-	-moz-column-gap: 2.5rem;
-	     column-gap: 2.5rem;
+.justify-evenly {
+	justify-content: space-evenly;
+}
+.justify-around {
+	justify-content: space-around;
+}
+.gap-y-3 {
+	row-gap: 0.75rem;
 }
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
@@ -833,11 +798,6 @@ video {
 	margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
-.space-x-20 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(5rem * var(--tw-space-x-reverse));
-	margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
-}
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -848,20 +808,35 @@ video {
 	margin-right: calc(1.25rem * var(--tw-space-x-reverse));
 	margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.space-x-11 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(2.75rem * var(--tw-space-x-reverse));
-	margin-left: calc(2.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-x-10 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-	margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
 .space-y-5 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+.space-y-7 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1.75rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1.75rem * var(--tw-space-y-reverse));
+}
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .rounded-md {
 	border-radius: 0.375rem;
@@ -883,6 +858,9 @@ video {
 .border {
 	border-width: 1px;
 }
+.border-2 {
+	border-width: 2px;
+}
 .border-t-2 {
 	border-top-width: 2px;
 }
@@ -897,13 +875,13 @@ video {
 	--tw-border-opacity: 1;
 	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
-.border-gray-100 {
-	--tw-border-opacity: 1;
-	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
-}
 .border-black {
 	--tw-border-opacity: 1;
 	border-color: rgba(0, 0, 0, var(--tw-border-opacity));
+}
+.border-gray-100 {
+	--tw-border-opacity: 1;
+	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
 .bg-red-sbtn {
 	--tw-bg-opacity: 1;
@@ -929,6 +907,18 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
 }
+.bg-red-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
+}
+.bg-red-700 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(185, 28, 28, var(--tw-bg-opacity));
+}
+.bg-gray-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
 .bg-cover {
 	background-size: cover;
 }
@@ -938,11 +928,23 @@ video {
 .fill-current {
 	fill: currentColor;
 }
-.p-2 {
-	padding: 0.5rem;
+.p-7 {
+	padding: 1.75rem;
 }
 .p-3 {
 	padding: 0.75rem;
+}
+.p-12 {
+	padding: 3rem;
+}
+.p-1 {
+	padding: 0.25rem;
+}
+.p-8 {
+	padding: 2rem;
+}
+.p-2 {
+	padding: 0.5rem;
 }
 .px-6 {
 	padding-left: 1.5rem;
@@ -964,6 +966,14 @@ video {
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
 }
+.px-40 {
+	padding-left: 10rem;
+	padding-right: 10rem;
+}
+.px-36 {
+	padding-left: 9rem;
+	padding-right: 9rem;
+}
 .pl-1 {
 	padding-left: 0.25rem;
 }
@@ -972,6 +982,12 @@ video {
 }
 .pl-2 {
 	padding-left: 0.5rem;
+}
+.pr-2 {
+	padding-right: 0.5rem;
+}
+.pt-2 {
+	padding-top: 0.5rem;
 }
 .pl-5 {
 	padding-left: 1.25rem;
@@ -994,11 +1010,20 @@ video {
 .pb-4 {
 	padding-bottom: 1rem;
 }
-.pr-2 {
-	padding-right: 0.5rem;
+.pb-2 {
+	padding-bottom: 0.5rem;
 }
-.pt-2 {
-	padding-top: 0.5rem;
+.pl-4 {
+	padding-left: 1rem;
+}
+.pb-6 {
+	padding-bottom: 1.5rem;
+}
+.pb-12 {
+	padding-bottom: 3rem;
+}
+.text-center {
+	text-align: center;
 }
 .text-2xl {
 	font-size: 1.5rem;
@@ -1036,6 +1061,10 @@ video {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
+.text-lg {
+	font-size: 1.125rem;
+	line-height: 1.75rem;
+}
 .font-extrabold {
 	font-weight: 800;
 }
@@ -1063,11 +1092,17 @@ video {
 .leading-tight {
 	line-height: 1.25;
 }
+.leading-loose {
+	line-height: 2;
+}
 .tracking-widest {
 	letter-spacing: 0.1em;
 }
 .tracking-wide {
 	letter-spacing: 0.025em;
+}
+.tracking-wider {
+	letter-spacing: 0.05em;
 }
 .text-gray-navalink {
 	--tw-text-opacity: 1;
@@ -1093,6 +1128,10 @@ video {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-xl {
+	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .ease-linear {
 	transition-timing-function: linear;
 }
@@ -1112,6 +1151,10 @@ video {
 .page-container{
   width: 70%;
   margin: 0 auto;
+}
+
+.shadow-outer{
+  box-shadow: 0px 16px 40px rgba(0, 0, 0, 0.15);
 }
 
 
@@ -1150,6 +1193,22 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
+.focus\:bg-red-sbtn:focus {
+	--tw-bg-opacity: 1;
+	background-color: rgba(223, 57, 64, var(--tw-bg-opacity));
+}
+.focus\:bg-red-800:focus {
+	--tw-bg-opacity: 1;
+	background-color: rgba(153, 27, 27, var(--tw-bg-opacity));
+}
+.focus\:bg-red-700:focus {
+	--tw-bg-opacity: 1;
+	background-color: rgba(185, 28, 28, var(--tw-bg-opacity));
+}
+.focus\:text-white:focus {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
 .focus\:outline-none:focus {
 	outline: 2px solid transparent;
 	outline-offset: 2px;
@@ -1165,56 +1224,16 @@ video {
 		margin-top: -0.5rem;
 	}
 
-	.md\:ml-28 {
-		margin-left: 7rem;
-	}
-
-	.md\:mr-48 {
-		margin-right: 12rem;
-	}
-
 	.md\:flex {
 		display: flex;
-	}
-
-	.md\:w-2\/6 {
-		width: 33.333333%;
-	}
-
-	.md\:w-1\/2 {
-		width: 50%;
-	}
-
-	.md\:w-1\/6 {
-		width: 16.666667%;
-	}
-
-	.md\:w-5\/12 {
-		width: 41.666667%;
-	}
-
-	.md\:w-4\/12 {
-		width: 33.333333%;
-	}
-
-	.md\:w-3\/12 {
-		width: 25%;
 	}
 
 	.md\:w-6\/12 {
 		width: 50%;
 	}
 
-	.md\:items-center {
-		align-items: center;
-	}
-
-	.md\:justify-center {
-		justify-content: center;
-	}
-
-	.md\:justify-between {
-		justify-content: space-between;
+	.md\:w-1\/2 {
+		width: 50%;
 	}
 
 	.md\:border {
@@ -1276,18 +1295,6 @@ video {
 		margin-right: auto;
 	}
 
-	.lg\:ml-24 {
-		margin-left: 6rem;
-	}
-
-	.lg\:mr-32 {
-		margin-right: 8rem;
-	}
-
-	.lg\:ml-auto {
-		margin-left: auto;
-	}
-
 	.lg\:ml-28 {
 		margin-left: 7rem;
 	}
@@ -1296,20 +1303,24 @@ video {
 		margin-right: 12rem;
 	}
 
-	.lg\:block {
-		display: block;
-	}
-
-	.lg\:inline-flex {
-		display: inline-flex;
+	.lg\:ml-auto {
+		margin-left: auto;
 	}
 
 	.lg\:grid {
 		display: grid;
 	}
 
+	.lg\:block {
+		display: block;
+	}
+
 	.lg\:flex {
 		display: flex;
+	}
+
+	.lg\:inline-flex {
+		display: inline-flex;
 	}
 
 	.lg\:hidden {
@@ -1322,10 +1333,6 @@ video {
 
 	.lg\:flex-grow {
 		flex-grow: 1;
-	}
-
-	.lg\:grid-cols-2 {
-		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
 	.lg\:flex-row {
@@ -1377,18 +1384,6 @@ video {
 	}
 }
 @media (min-width: 1280px) {
-
-	.xl\:mr-12 {
-		margin-right: 3rem;
-	}
-
-	.xl\:mr-16 {
-		margin-right: 4rem;
-	}
-
-	.xl\:mr-20 {
-		margin-right: 5rem;
-	}
 
 	.xl\:mr-24 {
 		margin-right: 6rem;
